Resolved awards image layout issue

--- a/styles/globals.less
+++ b/styles/globals.less
@@ -432,6 +432,7 @@
 		.ant-card-bordered {
 			.ant-card-cover {
 				min-height: 150px;
+				transform: translateY(-1px);
 
 				img {
 					min-width: 50% !important;
